website/code/message-gcj.log
BUILD COMMANDS FOR: message.gcj

Wed Jan 10 09:58:16 PST 2007

/usr/bin/gcj-4.1 -O3 -fomit-frame-pointer -march=athlon-tbird  -o message.gcj_run --main=message message.java
message.java:16: error: Identifier expected.
    private final BlockingQueue<Integer> queue;
                                  ^
message.java:17: error: syntax error.
    private final message next;
                     ^
message.java:19: error: Class or interface declaration expected.
    message(message next, int queueSize) {
       ^
message.java:20: error: Class or interface declaration expected.
        this.queue = new ArrayBlockingQueue<Integer>(queueSize);
           ^
message.java:21: error: Class or interface declaration expected.
        this.next = next;
           ^
message.java:22: error: Class or interface declaration expected.
    }
       ^
message.java:24: error: Class or interface declaration expected.
    public void run() {
              ^
message.java:25: error: Class or interface declaration expected.
        if (next==null)  return;
           ^
message.java:26: error: Class or interface declaration expected.
        try {
           ^
message.java:27: error: Class or interface declaration expected.
            while (true) {
               ^
message.java:28: error: Class or interface declaration expected.
                next.queue.put(this.queue.take() + 1);
                   ^
message.java:29: error: Class or interface declaration expected.
            }
               ^
message.java:30: error: Class or interface declaration expected.
        } catch (InterruptedException e) {
           ^
message.java:31: error: Class or interface declaration expected.
            throw new RuntimeException(e);
               ^
message.java:32: error: Class or interface declaration expected.
        }
           ^
message.java:33: error: Class or interface declaration expected.
    }
       ^
message.java:35: error: Class or interface declaration expected.
    public static void main(String args[]) throws InterruptedException {
                     ^
message.java:36: error: Class or interface declaration expected.
        int messagesCount = Integer.parseInt(args[0]);
           ^
message.java:37: error: Class or interface declaration expected.
        int queueSize = (int) (messagesCount * QUEUE_BUFFER_RATIO);
           ^
message.java:39: error: Class or interface declaration expected.
        message first = new message(null, queueSize);
           ^
message.java:40: error: Class or interface declaration expected.
        message last = first;
           ^
message.java:41: error: Class or interface declaration expected.
        for (int i = 0; i < NUMBER_OF_THREADS-1; i++) {
           ^
message.java:42: error: Class or interface declaration expected.
            last = new message(last, queueSize);
               ^
message.java:43: error: Class or interface declaration expected.
            Thread thread = new Thread(last, "Worker-" + i);
               ^
message.java:44: error: Class or interface declaration expected.
            thread.setDaemon(true);
               ^
message.java:45: error: Class or interface declaration expected.
            thread.start();
               ^
message.java:46: error: Class or interface declaration expected.
        }
           ^
message.java:48: error: Class or interface declaration expected.
        for (int j = 0; j < messagesCount; j++) {
           ^
message.java:49: error: Class or interface declaration expected.
            last.queue.put(1);
               ^
message.java:50: error: Class or interface declaration expected.
        }
           ^
message.java:52: error: Class or interface declaration expected.
        int sum = 0;
           ^
message.java:53: error: Class or interface declaration expected.
        while (sum < NUMBER_OF_THREADS * messagesCount) {
           ^
message.java:54: error: Class or interface declaration expected.
            sum += first.queue.take();
               ^
message.java:55: error: Class or interface declaration expected.
        }
           ^
message.java:57: error: Class or interface declaration expected.
        System.out.println(sum);
           ^
message.java:58: error: Class or interface declaration expected.
    }
       ^
message.java:59: error: Class or interface declaration expected.
}
   ^
message.java:9: error: Class or interface ‘java.util.concurrent.ArrayBlockingQueue’ not found in import.
import java.util.concurrent.ArrayBlockingQueue;
          ^
38 errors
make[2]: [message.gcj_run] Error 1 (ignored)
rm message.gcj

=================================================================
COMMAND LINE (%A is single numeric argument):

message.gcj_run %A
Error, could not exec message.gcj_run 1000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/message:/opt/shootout/shootout/bench/message/tmp:/home/brent/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)
Error, could not exec  (Inappropriate ioctl for device)
PATH=/opt/shootout/shootout/bench/message:/opt/shootout/shootout/bench/message/tmp:/opt/IronPython/bin:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/home/brent/bin:/usr/share/smlnj/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)
Error, could not exec  (Inappropriate ioctl for device)
PATH=/opt/shootout/shootout/bench/message:/opt/shootout/shootout/bench/message/tmp:/opt/IronPython/bin:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/home/brent/bin:/usr/share/smlnj/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
